--- a/project_1/test-output/index.html
+++ b/project_1/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dhars\AppData\Local\Temp\testng-eclipse-187420233\testng-customsuite.xml</span>
+                    <span>C:\Users\dhars\AppData\Local\Temp\testng-eclipse-458456835\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dhars\AppData\Local\Temp\testng-eclipse-187420233\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dhars\AppData\Local\Temp\testng-eclipse-458456835\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -193,12 +193,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'demo1Test')
 data.setCell(0, 2, 'project_demo.Demo1Test')
-data.setCell(0, 3, 5);
+data.setCell(0, 3, 10);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 ms</span>
+              <span class="suite-total-time">Total running time: 10 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,12 +213,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">project_demo.Demo1Test</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">demo4Test</span>
+                <br/>
                 <span class="ignored-method-name">demo2Test</span>
                 <br/>
                 <span class="ignored-method-name">demo3Test</span>
@@ -234,26 +236,10 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">project_demo.Demo1Test</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
-                <span class="method-name">configBS</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">configBM</span>
-                <span class="method-start">38 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">demo1Test</span>
-                <span class="method-start">41 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">configAM</span>
-                <span class="method-start">50 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-suite after">
-                <span class="method-name">configAS</span>
-                <span class="method-start">112 ms</span>
-              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
